# mlops-homework

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .sops.yaml  Dockerfile  LICENSE  README.md  app.py  docker-compose.yaml  inference.py  main.py  public_key.asc  pyproject.toml  secrets.yaml  settings.py  test_local_inference.py
api/models/: __init__.py  sentiment.py
config/: .env.dev  .env.prod
models/: classifier.joblib
tests/: test_api.py  test_app.py  test_inference.py
